DISABLED/content/20.docs/80.team/k8s/endpoint1768b.yaml
kind: Service
apiVersion: v1
metadata:
  name: philippe
spec:
  ports:
  - protocol: TCP
    port: 8008
---
kind: Endpoints
apiVersion: v1
metadata:
  name: philippe
subsets:
  - addresses:
      #- ip: 10.0.1.1
      - ip: 2a01:4f9:2a:25d5::17
    ports:
      - port: 8008
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: philippe
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    cert-manager.io/issuer: letsencrypt-prod
spec:
  rules:
  - host: philippe.paxpar.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: philippe
            port:
              number: 8008
  - host: philippe.qdoc.pro
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: philippe
            port:
              number: 8008
  tls:
  - hosts:
    - philippe.paxpar.tech
    - philippe.qdoc.pro
    secretName: paxpar-tls
